update collections
